--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    margin: 40px;
+}
+
+input {
+    text-align: center;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .gridContainer {
     display: grid;
     margin: auto;
