--- a/style.css
+++ b/style.css
@@ -16,19 +16,20 @@ input {
     align-items: center;
 }
 
+#clearBtn {
+    margin: 30px;
+}
+
 .gridContainer {
     display: grid;
     margin: auto;
-    margin-top: 100px;
-    width: 800px;
-    height: 800px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    width: 700px;
+    height: 700px;
     /* grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(20, 1fr); */
     border: 1px solid black;
-}
-
-.gridItem {
-    ;
 }
 
 .gridItem:hover {
