--- a/style.css
+++ b/style.css
@@ -80,6 +80,15 @@ body {
     background-color: black;
 }
 
+.rgb {
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: .225s;
+}
+
+.rgb:hover {
+    transform: scale(1.1) translateX(51px);
+}
 
 input {
     text-align: center;
