--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
 
 .toolbar {
     display: flex;
-    flex-direction: row;
+    flex: auto;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     color: rgb(39, 39, 39);
     background-color: rgb(156, 168, 175);
-    margin-top: 20px;
-    margin-left: 20px;
+    margin: 10px;
     border-radius: 21px;
     transition: .25s;
 }
@@ -27,8 +27,8 @@ body {
 }
 
 .big {
-    height: 64px;
-    width: 450px;
+    height: 380px;
+    width: 64px;
     border-radius: 32px;
     background-color: rgb(184, 199, 208);
 }
@@ -37,6 +37,7 @@ body {
     height: 20px;
     width: 20px;
     border-radius: 50%;
+    transition: .1s;
     
 }
 
@@ -81,13 +82,13 @@ body {
 }
 
 .rgb {
-    margin-left: 20px;
-    margin-top: 20px;
+    margin: 10px;
+    flex: auto;
     transition: .225s;
 }
 
 .rgb:hover {
-    transform: scale(1.1) translateX(51px);
+
 }
 
 input {
@@ -105,13 +106,43 @@ input {
     margin: 30px;
 }
 
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+button {
+    background-color: rgb(39, 39, 39);
+    border: 2px solid rgb(229, 229, 229);
+    margin: 10px;
+    color: white;
+    width: 64px;
+    height: 25px;
+    border-radius: 8px;
+}
+
+button:hover {
+    background-color: rgb(61, 61, 61);
+}
+
 .gridContainer {
     display: grid;
-    margin: auto;
+    margin-left: 30px;
+    margin-right: 5%;
     margin-top: 30px;
-    margin-bottom: 100px;
-    width: 700px;
-    height: 700px;
+    margin-bottom: 30px;
+    width: 500px;
+    height: 500px;
     border: 1px solid black;
     background-color: white;
 }
