--- a/style.css
+++ b/style.css
@@ -16,9 +16,18 @@ body {
     transition: .25s;
 }
 
+.pickedColor {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
 .small {
+    display: flex;
     height: 42px;
     width: 42px;
+    justify-content: center;
+    align-items: center;
 }
 
 .small:hover {
@@ -139,7 +148,7 @@ button:hover {
     display: grid;
     margin-left: 30px;
     margin-right: 5%;
-    margin-top: 30px;
+    margin-top: 0;
     margin-bottom: 30px;
     width: 500px;
     height: 500px;
